Revise output message to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
             </div>
         </div>
     </div> 
-    <!-- Settings Modal --> ← YE ADD KARO
+    <!-- Settings Modal -->
     <div id="settingsModal" class="modal">
         <div class="modal-overlay" onclick="closeSettings()"></div>
         <div class="modal-content modal-large">
@@ -668,4 +668,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
